--- a/index.html
+++ b/index.html
@@ -1,45 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Nucampsite</title>
-    <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Nucampsite</title>
+
+  <!-- Bootstrap CSS -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+
+  <!-- Compiled Custom Styles -->
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-        <a class="navbar-brand" href="#">Nucampsite</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Campsites</a></li>
-            </ul>
+  <div class="container">
+    <a class="navbar-brand" href="#">Nucampsite</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Campsites</a></li>
+      </ul>
 
-            <!-- Weather Component -->
-            <div id="weather" class="d-none d-md-flex align-items-center">
-                <i id="weather-icon"></i>
-                <span id="weather-temp"></span>
-                <span id="weather-description" class="d-none d-lg-inline"></span>
-            </div>
+      <!-- Weather Component - Initially hidden until data loads -->
+      <div id="weather" class="d-none">
+        <div id="weather-icon"></div>
+        <span id="weather-temp"></span>
+        <span id="weather-description" class="d-none d-md-inline"></span>
+      </div>
 
-            <span class="navbar-text">
-                <a data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>
-            </span>
-        </div>
+      <span class="navbar-text ms-2">
+        <a href="#" data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>
+      </span>
     </div>
+  </div>
 </nav>
 
-<footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2025 Nucampsite</p>
+<!-- Page content would go here -->
+<div class="container my-5">
+  <h1>Welcome to Nucampsite</h1>
+  <p>Check the current weather in Las Vegas displayed in the navigation bar.</p>
+</div>
+
+<footer class="bg-dark text-white text-center py-3 mt-auto">
+  <p class="mb-0">&copy; 2025 Nucampsite</p>
 </footer>
 
-<!-- Scripts -->
-<script src="scripts.js" type="module"></script>
+<!-- Login Modal (skeleton) -->
+<div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="loginModalLabel">Login</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <!-- Login form would go here -->
+        <p>Login functionality coming soon.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Your Weather Script -->
+<script src="scripts.js"></script>
 
 </body>
 </html>
